@@ -1,3 +1,5 @@
 #g++ -I../../ -I/usr/local/firstworks/include -o threadtest threadtest.C -L/usr/local/firstworks/lib -lsqlrclient -lrudiments -lpthread
 #g++ -I../../ -I/usr/local/firstworks/include -o forktest forktest.C -L/usr/local/firstworks/lib -lsqlrclient -lrudiments
-g++ -I../../ -I/usr/local/firstworks/include -o querytest querytest.C -L/usr/local/firstworks/lib -lsqlrclient -lrudiments
+#g++ -I../../ -I/usr/local/firstworks/include -o querytest querytest.C -L/usr/local/firstworks/lib -lsqlrclient -lrudiments
+#g++ -I../../ -I/usr/local/firstworks/include -o query query.C -L/usr/local/firstworks/lib -lsqlrclient -lrudiments
+g++ -I../../ -I/usr/local/firstworks/include -o cursortest cursortest.C -L/usr/local/firstworks/lib -lsqlrclient -lrudiments
