@@ -21,6 +21,8 @@
 	added db2 9.1 installation doc
 	added firebird 2.0 installation docs
 	router connection overrides authtier=database
+	fixed a bug where clients would hang if they requested a cursor when
+		none were available
 
 0.37 - integrated Charles Frank's SID code
 	fixed bug in configure script where it would erroneously report that
